--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,12 @@ django-cors-headers==4.3.1
 django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+drf-yasg==1.21.7
+inflection==0.5.1
+packaging==23.2
 PyJWT==2.8.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 sqlparse==0.4.4
 typing_extensions==4.8.0
+uritemplate==4.1.1
