--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
 inflection==0.5.1
 packaging==23.2
+Pillow==10.1.0
 PyJWT==2.8.0
 pytz==2023.3.post1
 PyYAML==6.0.1
